--- a/views/developers.ejs
+++ b/views/developers.ejs
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developers</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <%- include("./partials/navbar") %>
+
     <h1>Developers</h1>
 </body>
 </html>
