--- a/views/games.ejs
+++ b/views/games.ejs
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Games</h1>
+    <%- include("./partials/navbar") %>
+    <h1 class="content-title">Games</h1>
+    <div class="filter-container">
+
+    </div>
+    <div class="items-container">
+        <% games.forEach(function(game){%>
+            <div class="item-container">
+                <div class="item-name"><%= game["name"] %></div>
+                <!-- <div><%= game["release"].toLocaleString().split(",")[0] %></div> -->
+                 <a class="item-button" href="/games/game?game_id=<%= game["game_id"]%>">View Details</a>
+            </div>
+        <% }) %>
+    </div>
 </body>
 </html>
