--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <%- include("./partials/navbar") %>
    <h1>Homepage</h1> 
-   <ul><a href="/games">games</a></ul>
-   <ul><a href="/categories">categories</a></ul>
-   <ul><a href="/developers">developers</a></ul>
 </body>
 </html>
